--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ torch>=2.0.0
 numpy>=1.24.0
 scipy>=1.10.0
 matplotlib>=3.7.0
+pyyaml>=6.0
 # Airport Defense Dashboard - Dependencies
 # Compatible with Python 3.9
 
